Adding TV Series page and fixing styles

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,7 +43,7 @@
   }
 }
 
-.top-movies-wrapper,.main-page-section-two,.popular-movies-wrapper,.top-rated-popular-movies-wrapper,.released-2022-movies-wrapper{
+.top-movies-wrapper,.main-page-section-two,.popular-movies-wrapper,.top-rated-popular-movies-wrapper,.released-2022-movies-wrapper,.tv-series-wrapper{
   display: flex;
     flex-wrap: wrap;
     gap: 20px;
