Adding Footer Component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -77,3 +77,16 @@ a{
   color: #000 !important;
   text-decoration: none !important;
 }
+
+.dCQPbG{
+  background: #f8f9fa !important;
+  border: none;
+}
+
+.vdkON{
+  font-size: xx-large;
+}
+
+.logo-footer-img:hover{
+  cursor: pointer;
+}
