--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -105,3 +105,66 @@ a{
 .signup-link:hover{
   color: #0D6EFD !important;
 }
+
+.background-image{
+  background: rgb(200, 200, 200);
+  height: calc(100vh - 30rem);
+  min-height: 50rem;
+  max-height: 57rem;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  background-image: url('./assets/movies2022.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.background-image-inner{
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 1) 151px, rgba(255, 255, 255, 0.2) 100%);
+  height: calc(100vh - 30rem);
+  min-height: 50rem;
+  max-height: 57rem;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.inner-image{
+  display: flex;
+  position: fixed;
+  gap: 10vw;
+}
+
+.poster-image{
+  width: 400px;
+  height: 600px;
+  margin: 95px 0 0 100px;
+  border-radius: 15px;
+  box-shadow: 0px 0px 30px 5px grey;
+}
+
+.movie-details{
+  color: #fff;
+  text-align: start;
+  width: 600px;
+  align-self: center;
+}
+
+.add-to-gallery-btn{
+  height: 4.4rem;
+  border-radius: 0 0 15px 15px !important;
+  position: absolute;
+  bottom: calc(65% - 28.3rem);
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  width: 402px;
+  margin-left: 99px;
+  border-top: none !important;
+}
