--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -190,4 +190,18 @@ a{
 .actor-photo{
   width: 195px;
   height: 215px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 9px 1px black;
+}
+
+.arrow-btn-scroll{
+  place-self: center;
+  font-size: xx-large;
+  cursor: pointer;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.arrow-btn-scroll:hover{
+  transform: scale(1.5);
 }
