--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -172,7 +172,7 @@ a{
 .react-horizontal-scrolling-menu--wrapper{
   margin: 4vh 4vw 0 4vw;
 }
-.top-billed-cast-title,.more-info-title{
+.top-billed-cast-title,.trailer,.more-info{
   text-align: start;
   margin: 40px 0px 0px 100px;
 }
@@ -216,8 +216,10 @@ a{
 .section-two-movie-details{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  margin: 40px 20px 0px 20px;
+  margin: 0vh 4vw 4vh 0vw;
 }
-
+.trailer{
+  align-self: start;
+}
