--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -229,3 +229,10 @@ a{
   height: 130px;
   border-radius: 50%;
 }
+
+.genres-line{
+  display: flex;
+  align-items: baseline;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
