--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -236,3 +236,14 @@ a{
   justify-content: flex-start;
   flex-wrap: wrap;
 }
+
+/* My Gallery */
+
+.myGallery-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 50px;
+  justify-content: center;
+  align-items: center;
+}
