--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@ body {
   font-family: 'Noto Serif', serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f8f9fa;
+  background-color: #00cec9;
 }
 
 code {
