--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -220,6 +220,7 @@ a{
   justify-content: space-evenly;
   align-items: center;
   margin: 0vh 4vw 4vh 0vw;
+  color: #fff;
 }
 .trailer{
   align-self: start;
@@ -288,4 +289,13 @@ a{
 
 h2{
   color: #81ecec;
+}
+
+.background-color-transparent{
+  background-color:transparent !important
+}
+
+/* Movies details page */
+.btn-outline-secondary{
+  --bs-btn-hover-bg: #00cec9 !important
 }
