--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -299,3 +299,15 @@ h2{
 .btn-outline-secondary{
   --bs-btn-hover-bg: #00cec9 !important
 }
+
+/* Form Account */
+
+.label-input{
+  text-align: start;
+  margin-top: 20px;
+  color: #fff;
+}
+
+.text-muted-app{
+  color: #81ecec !important;
+}
