--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -84,6 +84,8 @@
 h1{
   background-color: #faed26;
   color: #46344e;
+  font-family: 'Croissant One', cursive !important;
+  padding-bottom: 10px;
 }
 
 a{
@@ -229,8 +231,9 @@ a{
 .actor-photo{
   width: 195px;
   height: 215px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 9px 1px black;
+  border-radius: 50%;
+  margin: 20px 20px 0px 20px;
+  box-shadow: 0px 0px 15px 1px #faed26;
 }
 
 .arrow-btn-scroll{
