--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -474,3 +474,32 @@ h2{
   background-color: #46344e;
   font-size: 1.3rem;
 }
+.genre-card{
+  width: 200px;
+  height: 200px;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 50%;
+  color: #46344e;
+  font-size: 1.3rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #faed26;
+  margin-right: 10px;
+  box-shadow: 0 0 20px 10px #46344e;
+  transition: .3s;
+}
+.genre-card:hover{
+  transform: scale(.95);
+  cursor: pointer;
+  transition: .3s;
+  opacity: .7;
+}
+.genres-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 5vh 10vw 5vh 10vw;
+}
